Refactor sortedArrayDemonstratesCorrectPriority Change Arrays.asList -> List.of